Bug#22125 "Falcon: Double precision searches fail if index exists"

Force DOUBLE values of -0 to 0.